asm/parser/parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = [],
        peg$c1 = peg$FAILED,
        peg$c2 = /^[a-z_]/,
        peg$c3 = { type: "class", value: "[a-z_]", description: "[a-z_]" },
        peg$c4 = function(value) { return value.join(""); },
        peg$c5 = ":",
        peg$c6 = { type: "literal", value: ":", description: "\":\"" },
        peg$c7 = function(name) {
            return {
                type: 'symbolic',
                name: name
            };
        },
        peg$c8 = /^[0-9]/,
        peg$c9 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c10 = function(name) {
            return {
                type: 'numeric',
                name: name
            };
        },
        peg$c11 = /^[0-9A-Fa-f]/,
        peg$c12 = { type: "class", value: "[0-9A-Fa-f]", description: "[0-9A-Fa-f]" },
        peg$c13 = "H",
        peg$c14 = { type: "literal", value: "H", description: "\"H\"" },
        peg$c15 = "h",
        peg$c16 = { type: "literal", value: "h", description: "\"h\"" },
        peg$c17 = function(value) {
            if (value.length > 3) {
                expected("Hex addresses must be <= FFF.");
            }
            return parseInt(value.join(""), 16);
        },
        peg$c18 = function(value) { return { type: "raw", value: value }; },
        peg$c19 = function(value) {
            if (value.length > 2) {
                expected("Bytes must be <= FF.");
            }
            return {
                type: "raw",
                value: parseInt(value.join(""), 16)
            };
        },
        peg$c20 = function(value) {
            return {
                type: "raw",
                value: parseInt(value, 16)
            }
        },
        peg$c21 = function(value) { return { type: "symbolic", name: value }; },
        peg$c22 = "f",
        peg$c23 = { type: "literal", value: "f", description: "\"f\"" },
        peg$c24 = "b",
        peg$c25 = { type: "literal", value: "b", description: "\"b\"" },
        peg$c26 = function(value, direction) {
            var forward = false;

            if (direction === "f") {
                forward = true;
            } else {
                forward = false;
            }

            return { type: "numeric", name: value, forward: forward };
        },
        peg$c27 = "V",
        peg$c28 = { type: "literal", value: "V", description: "\"V\"" },
        peg$c29 = function(index) {
            return {
                type: "raw",
                value: parseInt(index, 16)
            }
        },
        peg$c30 = function(label) { return label; },
        peg$c31 = /^[ \t]/,
        peg$c32 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c33 = "\n",
        peg$c34 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c35 = ",",
        peg$c36 = { type: "literal", value: ",", description: "\",\"" },
        peg$c37 = function(labels, instruction) {
            var labelsObject = {};

            for (var i = 0; i < labels.length; i++) {
                var label = labels[i];
                labelsObject[label.name] = label;
            }

            return {
                labels: labelsObject,
                instruction: instruction
            };
        },
        peg$c38 = function(instruction) {
            return instruction;
        },
        peg$c39 = "CLS",
        peg$c40 = { type: "literal", value: "CLS", description: "\"CLS\"" },
        peg$c41 = function() {
            return {
                template: "00E0"
            };
        },
        peg$c42 = "RET",
        peg$c43 = { type: "literal", value: "RET", description: "\"RET\"" },
        peg$c44 = function() {
            return {
                template: "00EE"
            };
        },
        peg$c45 = "JP",
        peg$c46 = { type: "literal", value: "JP", description: "\"JP\"" },
        peg$c47 = function(addr) {
            return {
                template: "1NNN",
                replacements: {
                    "NNN": addr
                }
            };
        },
        peg$c48 = "CALL",
        peg$c49 = { type: "literal", value: "CALL", description: "\"CALL\"" },
        peg$c50 = function(addr) {
            return {
                template: "2NNN",
                replacements: {
                    "NNN": addr
                }
            };;
        },
        peg$c51 = "SE",
        peg$c52 = { type: "literal", value: "SE", description: "\"SE\"" },
        peg$c53 = function(x, byte) {
            return {
                template: "3XKK",
                replacements: {
                    "X": x,
                    "KK": byte
                }
            };
        },
        peg$c54 = "SNE",
        peg$c55 = { type: "literal", value: "SNE", description: "\"SNE\"" },
        peg$c56 = function(x, byte) {
            return {
                template: "4XKK",
                replacements: {
                    "X": x,
                    "KK": byte
                }
            };
        },
        peg$c57 = function(x, y) {
            return {
                template: "5XY0",
                replacements: {
                    "X": x,
                    "Y": y
                }
            };
        },
        peg$c58 = "LD",
        peg$c59 = { type: "literal", value: "LD", description: "\"LD\"" },
        peg$c60 = function(x, byte) {
            return {
                template: "6XKK",
                replacements: {
                    "X": x,
                    "KK": byte
                }
            };
        },
        peg$c61 = "ADD",
        peg$c62 = { type: "literal", value: "ADD", description: "\"ADD\"" },
        peg$c63 = function(x, byte) {
            return {
                template: "7XKK",
                replacements: {
                    "X": x,
                    "KK": byte
                }
            };
        },
        peg$c64 = function(x, y) {
            return {
                template: "8XY0",
                replacements: {
                    "X": x,
                    "Y": y
                }
            };
        },
        peg$c65 = "OR",
        peg$c66 = { type: "literal", value: "OR", description: "\"OR\"" },
        peg$c67 = function(x, y) {
            return {
                template: "8XY1",
                replacements: {
                    "X": x,
                    "Y": y
                }
            };
        },
        peg$c68 = "AND",
        peg$c69 = { type: "literal", value: "AND", description: "\"AND\"" },
        peg$c70 = function(x, y) {
            return {
                template: "8XY2",
                replacements: {
                    "X": x,
                    "Y": y
                }
            };
        },
        peg$c71 = "XOR",
        peg$c72 = { type: "literal", value: "XOR", description: "\"XOR\"" },
        peg$c73 = function(x, y) {
            return {
                template: "8XY3",
                replacements: {
                    "X": x,
                    "Y": y
                }
            };
        },
        peg$c74 = function(x, y) {
            return {
                template: "8XY4",
                replacements: {
                    "X": x,
                    "Y": y
                }
            };
        },
        peg$c75 = "SUB",
        peg$c76 = { type: "literal", value: "SUB", description: "\"SUB\"" },
        peg$c77 = function(x, y) {
            return {
                template: "8XY5",
                replacements: {
                    "X": x,
                    "Y": y
                }
            };
        },
        peg$c78 = "SHR",
        peg$c79 = { type: "literal", value: "SHR", description: "\"SHR\"" },
        peg$c80 = null,
        peg$c81 = function(x, opt) {
            var y;
            if (opt) {
                y = opt[1];
            } else {
                y = {
                    type: "raw",
                    value: 0
                }
            }

            return {
                template: "8XY6",
                replacements: {
                    "X": x,
                    "Y": y
                }
            };
        },
        peg$c82 = "SUBN",
        peg$c83 = { type: "literal", value: "SUBN", description: "\"SUBN\"" },
        peg$c84 = function(x, y) {
            return {
                template: "8XY7",
                replacements: {
                    "X": x,
                    "Y": y
                }
            };
        },
        peg$c85 = "SHL",
        peg$c86 = { type: "literal", value: "SHL", description: "\"SHL\"" },
        peg$c87 = function(x, opt) {
            var y;
            if (opt) {
                y = opt[1];
            } else {
                y = {
                    type: "raw",
                    value: 0
                }
            }

            return {
                template: "8XYE",
                replacements: {
                    "X": x,
                    "Y": y
                }
            };
        },
        peg$c88 = function(x, y) {
            return {
                template: "9XY0",
                replacements: {
                    "X": x,
                    "Y": y
                }
            };
        },
        peg$c89 = "I",
        peg$c90 = { type: "literal", value: "I", description: "\"I\"" },
        peg$c91 = function(addr) {
            return {
                template: "ANNN",
                replacements: {
                    "NNN": addr
                }
            };
        },
        peg$c92 = "V0",
        peg$c93 = { type: "literal", value: "V0", description: "\"V0\"" },
        peg$c94 = "RND",
        peg$c95 = { type: "literal", value: "RND", description: "\"RND\"" },
        peg$c96 = function(x, byte) {
            return {
                template: "CXKK",
                replacements: {
                    "X": x,
                    "KK": byte
                }
            };
        },
        peg$c97 = "DRW",
        peg$c98 = { type: "literal", value: "DRW", description: "\"DRW\"" },
        peg$c99 = function(x, y, nibble) {
            return {
                template: "DXYN",
                replacements: {
                    "X": x,
                    "Y": y,
                    "N": nibble
                }
            };
        },
        peg$c100 = "SKP",
        peg$c101 = { type: "literal", value: "SKP", description: "\"SKP\"" },
        peg$c102 = function(x) {
            return {
                template: "EX9E",
                replacements: {
                    "X": x
                }
            };
        },
        peg$c103 = "SKNP",
        peg$c104 = { type: "literal", value: "SKNP", description: "\"SKNP\"" },
        peg$c105 = function(x) {
            return {
                template: "EXA1",
                replacements: {
                    "X": x
                }
            };
        },
        peg$c106 = "DT",
        peg$c107 = { type: "literal", value: "DT", description: "\"DT\"" },
        peg$c108 = function(x) {
            return {
                template: "FX07",
                replacements: {
                    "X": x
                }
            };
        },
        peg$c109 = "K",
        peg$c110 = { type: "literal", value: "K", description: "\"K\"" },
        peg$c111 = function(x) {
            return {
                template: "FX0A",
                replacements: {
                    "X": x
                }
            };
        },
        peg$c112 = function(x) {
            return {
                template: "FX15",
                replacements: {
                    "X": x
                }
            };
        },
        peg$c113 = "ST",
        peg$c114 = { type: "literal", value: "ST", description: "\"ST\"" },
        peg$c115 = function(x) {
            return {
                template: "FX18",
                replacements: {
                    "X": x
                }
            }
        },
        peg$c116 = function(x) {
            return {
                template: "FX1E",
                replacements: {
                    "X": x
                }
            }
        },
        peg$c117 = "F",
        peg$c118 = { type: "literal", value: "F", description: "\"F\"" },
        peg$c119 = function(x) {
            return {
                template: "FX29",
                replacements: {
                    "X": x
                }
            }
        },
        peg$c120 = "B",
        peg$c121 = { type: "literal", value: "B", description: "\"B\"" },
        peg$c122 = function(x) {
            return {
                template: "FX33",
                replacements: {
                    "X": x
                }
            }
        },
        peg$c123 = function(x) {
            return {
                template: "FX55",
                replacements: {
                    "X": x
                }
            }
        },
        peg$c124 = function(x) {
            return {
                template: "FX65",
                replacements: {
                    "X": x
                }
            }
        },
        peg$c125 = function(expr) { return expr; },
        peg$c126 = function(value) { return value; },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parsestatements();

      return s0;
    }

    function peg$parselabel() {
      var s0;

      s0 = peg$parsesymbolic_label();
      if (s0 === peg$FAILED) {
        s0 = peg$parsenumeric_label();
      }

      return s0;
    }

    function peg$parsesymbolic_str() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c2.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c2.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
        }
      } else {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c4(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsesymbolic_label() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsesymbolic_str();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s2 = peg$c5;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c7(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsenumeric_str() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c8.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c8.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
        }
      } else {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c4(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsenumeric_label() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsenumeric_str();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s2 = peg$c5;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c10(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsehex_digit() {
      var s0;

      if (peg$c11.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }

      return s0;
    }

    function peg$parseaddr_string() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsehex_digit();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parsehex_digit();
        }
      } else {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 72) {
          s2 = peg$c13;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 104) {
            s2 = peg$c15;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c17(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseraw_addr() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseaddr_string();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c18(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsebyte() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsehex_digit();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parsehex_digit();
        }
      } else {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 72) {
          s2 = peg$c13;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 104) {
            s2 = peg$c15;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c19(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsenibble() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsehex_digit();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 72) {
          s2 = peg$c13;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 104) {
            s2 = peg$c15;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c20(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parselabel_ref() {
      var s0;

      s0 = peg$parsesymbolic_ref();
      if (s0 === peg$FAILED) {
        s0 = peg$parsenumeric_ref();
      }

      return s0;
    }

    function peg$parsesymbolic_ref() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parsesymbolic_str();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c21(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsenumeric_ref() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsenumeric_str();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 102) {
          s2 = peg$c22;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c23); }
        }
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 98) {
            s2 = peg$c24;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c25); }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c26(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseaddr_arg() {
      var s0;

      s0 = peg$parseraw_addr();
      if (s0 === peg$FAILED) {
        s0 = peg$parselabel_ref();
      }

      return s0;
    }

    function peg$parseregister() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 86) {
        s1 = peg$c27;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsehex_digit();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c29(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsepadded_label() {
      var s0, s1, s2, s3;
